2010-04-12  Andrew Overholt  <overholt@redhat.com>

	* feature.properties: Match consistent license text (bug #306627).

2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Bump version to 0.3.0.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Recomputed dependencies.

2009-05-28  Elliott Baron  <ebaron@redhat.com>

	* feature.properties: Fix featureProvider key.

2009-05-20  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Remove '.feature' from feature ID.
	
2009-05-19  Andrew Overholt  <overholt@redhat.com>

	* feature.properties: Change provider from Eclipse.org to Eclipse.

2009-04-03  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: 0.2.0 version.
	
2009-02-12  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Updated dependencies org.junit4 -> org.junit

2008-12-16  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: See if we can get the valgrind tests to find this plugin if it's
	jarred.

2008-12-16  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Fixed feature ID.

2008-12-16  Elliott Baron  <ebaron@redhat.com>

	* build.properties: Inital checkin.
	* feature.xml: Likewise.
	* feature.properties: Likewise.
	* epl-v10.html: Likewise.