@@ -1,3 +1,4 @@
 bin.includes = feature.xml,\
                feature.properties,\
-               epl-v10.html
+               epl-v10.html,\
+               license.html
